# django-on-replit

./: .replit  README.md  pyproject.toml
.github/workflows/: django.yml
django_project/: settings.py
