[tool.poetry]
name = "django-on-replit"
version = "0.1.0"
description = ""
authors = ["ShriekDj <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
pipenv = "^2022.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
